# mono-fastapi-nestjs-sk

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  starter-app.code-workspace  turbo.json
apps/backend/: Dockerfile  pyproject.toml
apps/backend/app/: main.py
apps/frontend/: Dockerfile  package.json  tailwind.config.js  tsconfig.json
